# gensecret

./: Cargo.toml  README.md  config.yaml  justfile
src/: main.rs
